--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 </head>
 <body>
 	<div class="image-wrapper">
-		<img src="images/newBadge.gif" alt="badge">
+		<img src="images/newBadge.gif" alt="badge" id="jpgBadge">
+		<img src="images/newBadge.gif" alt="badge" id="jpgBadge1" class="jpgBadge">
+		<img src="images/newBadge.gif" alt="badge" id="jpgBadge2" class="jpgBadge">
+		<img src="images/newBadge.gif" alt="badge" id="jpgBadge3" class="jpgBadge">
+		<img src="images/newBadge.gif" alt="badge" id="jpgBadge4" class="jpgBadge">
+		<img src="images/newBadge.gif" alt="badge" id="jpgBadge5" class="jpgBadge">
 	</div>
-	<div class="image-wrapper">
-		<img src="images/newBadge.svg" alt="badge">
-	</div>
+	
+
+	<!-- JS files always go at the bottom -->
+	<script src="js/main.js"></script>
 </body>
 </html>
